--- a/page/styles/grid-layout.css
+++ b/page/styles/grid-layout.css
@@ -4,7 +4,7 @@
     display: grid;
     grid-template-areas:
         '. header .'
-        '. main main'
+        '. main .'
         'footer footer footer';
     grid-template-columns: 1fr 5fr 1fr;
     grid-template-rows: auto 1fr auto;
@@ -33,16 +33,13 @@
         'logo'
         'search-bar'
         'title';
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows: 1fr 1fr auto;
+    grid-template-columns: auto;
     gap: 1rem;
     height: 60vh;
     justify-items: center;
 
-    transition: 0.7s;
-}
-
-.header-template-areas:hover {
-    margin-top: calc(4rem - 60vh);
+    transition: 0.5s;
 }
 
 .header-template-areas>.logo {
@@ -51,8 +48,10 @@
 
 .header-template-areas>.search-bar {
     grid-area: search-bar;
+    width: 60%;
 }
 
-.header-template-areas>title {
+.header-template-areas>.title-tab {
     grid-area: title;
+    width: 100%;
 }
